--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.6.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.0.17",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "shortid": "^2.2.8",
+    "valid-url": "^1.0.9"
   }
 }
